Fix 'Sitename overlays loginbox on mobile devices' - Ref: https://moodle.org/mod/forum/discuss.php?d=424098#p1708632.

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -209,7 +209,7 @@ order for prescidence.
     }
 
     .has-page-header.page-header-margin.header-style1 #page {
-        margin-top: 30px;
+        margin-top: 40px;
     }
 
     .mobiletheme.page-header-margin.header-style1.has-header-bg .headerbgimage {
